--- a/app/views/layouts/parts/_manage_nav.html.erb
+++ b/app/views/layouts/parts/_manage_nav.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-3 col-lg-2 text-right">
         <a href="<%= edit_organizer_event_path(@event) %>" class="btn btn-default">Edit</a>
-        <a href="<%= client_event_path(@event) %>" class="btn btn-default">View Event</a>
+        <a href="<%= client_event_path(@event) %>" target="_blank" class="btn btn-default">View Event</a>
       </div>
     </div>
 
