--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -9,7 +9,7 @@
         <div class="event-section-panel">
 					<div class="row panel-header">
 						<div class="col-xs-12 col-md-6">
-							Attendees: <%= section.tickets.available.count %>
+							Attendees: <%= section.tickets.paid.count %>
 						</div>
 						<div class="col-xs-6 col-md-3 text-right">
 							<%= link_to 'EXPORT', attendees_organizer_event_path(format: :xlsx) %>
