--- a/app/views/organizer/parts/_section.html.erb
+++ b/app/views/organizer/parts/_section.html.erb
@@ -104,7 +104,7 @@
              class="form-control"
              required="true" />
     </div>
-    <div class="col-xs-12 col-mdxs-2 form-group">
+    <div class="col-xs-12 col-md-2 form-group">
       <label for="tickets-quantity">Quantity available</label>
       <input type="number"
              name="new_ticket_totals[]"
