--- a/app/assets/stylesheets/daydash.scss
+++ b/app/assets/stylesheets/daydash.scss
@@ -1,7 +1,6 @@
 //= require jquery-ui
 //= require slick
 //= require slick-theme
-//= require_tree ./components
-//= require_tree ./customs
-//= require_tree ./responsives
+//= require ./pages/base
+
 @import 'parsley';
