--- a/app/assets/stylesheets/pages/base.scss
+++ b/app/assets/stylesheets/pages/base.scss
@@ -1,5 +1,6 @@
-@import "layout";
-@import "components";
-@import "profiles";
-@import "events";
-@import "organizers";
+@import 'layout';
+@import 'modules/all';
+@import 'components';
+@import 'profiles';
+@import 'events';
+@import 'organizers';
