--- a/app/assets/stylesheets/pages/modules/_button.sass
+++ b/app/assets/stylesheets/pages/modules/_button.sass
@@ -50,6 +50,16 @@
     color: white
     border: 0px
 
+.btn-daydash-status
+  &, &:hover, &:active, &:visited, &:link
+    background: #fff
+    color: #17A41D
+    border: 2px solid #17A41D
+    padding: 4px 15px
+    font-size: 9pt
+    font-weight: 900
+    text-transform: uppercase
+
 .btn-facebook
   &, &:hover, &:active, &:visited, &:link
     background: #3B5998
