--- a/app/assets/stylesheets/pages/modules/_button.sass
+++ b/app/assets/stylesheets/pages/modules/_button.sass
@@ -50,6 +50,12 @@
     color: white
     border: 0px
 
+.btn-daydash-grey-1
+  &, &:hover, &:active, &:visited, &:link
+    background: #414141
+    color: white
+    border: 0px
+
 .btn-daydash-status
   &, &:hover, &:active, &:visited, &:link
     background: #fff
