--- a/app/assets/stylesheets/pages/modules/_button.sass
+++ b/app/assets/stylesheets/pages/modules/_button.sass
@@ -66,6 +66,18 @@
     font-weight: 900
     text-transform: uppercase
 
+.btn-daydash-live
+  &, &:hover, &:active, &:visited, &:link
+    background: #fff
+    color: #17A41D
+    border: 2px solid #17A41D
+
+.btn-daydash-draft
+  &, &:hover, &:active, &:visited, &:link
+    background: #fff
+    color: #C6A61D
+    border: 2px solid #C6A61D
+
 .btn-facebook
   &, &:hover, &:active, &:visited, &:link
     background: #3B5998
