--- a/app/views/organizer/events/dashboard.html.erb
+++ b/app/views/organizer/events/dashboard.html.erb
@@ -1,24 +1,66 @@
 <% content_for :body_id, 'organizer-event-dashboard' %>
 <% content_for :body_class, 'organizer-event-page' %>
 <%= render partial: "layouts/parts/manage_nav" %>
+<style media="screen">
+  .widget {
+    height: 120px;
+    background: #fff;
+    margin-top: 30px;
+    padding-top: 20px;
+  }
+  .widget p {
+    text-align: center;
+    padding: 0px;
+    margin: 0px;
+  }
+</style>
+<div class="section" id="dashboard-show-section" style="height: 240px; background: #F3F3F3;">
+  <div class="container">
+    <div class="section-header row">
+      <div class="col-xs-12">
+        <div class="row">
+          <div class="col-xs-4">
+            <div class="widget">
+              <p style="font-size: 30pt; text-transform: uppercase; color: #17A41D;">$20,000</p>
+              <p style="font-size: 14pt; text-transform: uppercase;">Total sales</p>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="widget">
+              <span class="text-left">85%</span>
+              <span class="text-right">246 / 300</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0.0%;">
+                  <span class="sr-only">0.0% Complete</span>
+                </div>
+              </div>
+              <p style="font-size: 14pt; text-transform: uppercase;">Tickets sold</p>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="widget">
+              <p style="font-size: 30pt; text-transform: uppercase; color: #000;">10</p>
+              <p style="font-size: 14pt; text-transform: uppercase;">Day to go</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            xx
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="section" id="order-list-section">
   <div class="container">
     <div class="section-body row">
       <div class="col-xs-12">
         <div class="event-section-panel">
           <div class="row panel-header">
-            <div class="col-xs-6 text-left">
-              <%= convert_to_currency @event.get_total_sales %> total sales from <%= @event.orders.paid.count %> orders
-            </div>
-            <div class="col-xs-3 col-md-3 text-right">
-              <%= link_to 'EXPORT', orders_organizer_event_path(format: :xlsx) %>
-            </div>
-            <div class="col-xs-3 col-md-3 text-right">
-              <select class="form-control">
-                <option selected disabled>เรียงตาม: Recent</option>
-                <option>1</option>
-                <option>2</option>
-              </select>
+            <div class="col-xs-12">
+              <h2 style="margin-top: 0px;">RECENT ORDERS</h2>
             </div>
           </div>
           <div class="table-responsive organizer-table">
