--- a/app/views/organizer/events/dashboard.html.erb
+++ b/app/views/organizer/events/dashboard.html.erb
@@ -2,16 +2,31 @@
 <% content_for :body_class, 'organizer-event-page' %>
 <%= render partial: "layouts/parts/manage_nav" %>
 <style media="screen">
-  .widget {
+  .dashboard {
     height: 120px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .copy-link {
+    padding: 10px;
+  }
+  .widget {
     background: #fff;
     margin-top: 30px;
-    padding-top: 20px;
   }
   .widget p {
     text-align: center;
     padding: 0px;
     margin: 0px;
+  }
+  .progress {
+    height: 5px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+  .progress .progress-bar {
+    background-color: #17A41D;
   }
 </style>
 <div class="section" id="dashboard-show-section" style="height: 240px; background: #F3F3F3;">
@@ -20,17 +35,19 @@
       <div class="col-xs-12">
         <div class="row">
           <div class="col-xs-4">
-            <div class="widget">
-              <p style="font-size: 30pt; text-transform: uppercase; color: #17A41D;">$20,000</p>
+            <div class="widget dashboard">
+              <p style="font-size: 30pt; text-transform: uppercase; color: #17A41D;"><%= convert_to_currency(@total_sales) %></p>
               <p style="font-size: 14pt; text-transform: uppercase;">Total sales</p>
             </div>
           </div>
           <div class="col-xs-4">
-            <div class="widget">
-              <span class="text-left">85%</span>
-              <span class="text-right">246 / 300</span>
+            <div class="widget dashboard">
+              <div class="number" style="margin-top: 15px">
+                <div style="display: inline-block; width: 50%; float: left"><%= '%.2f' % @percentage %>%</div>
+                <div style="display: inline-block; width: 50%; text-align: right;"><%= @paid %> / <%= @total %></div>
+              </div>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 0.0%;">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= @percentage %>%;">
                   <span class="sr-only">0.0% Complete</span>
                 </div>
               </div>
@@ -38,7 +55,7 @@
             </div>
           </div>
           <div class="col-xs-4">
-            <div class="widget">
+            <div class="widget dashboard">
               <p style="font-size: 30pt; text-transform: uppercase; color: #000;">10</p>
               <p style="font-size: 14pt; text-transform: uppercase;">Day to go</p>
             </div>
@@ -46,7 +63,10 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            xx
+            <div class="widget copy-link">
+              <div class="btn btn-default">COPY URL</div>
+              <div style="display: inline-block; padding-left: 20px;"><%= "#{App.domain}#{client_event_path(@event)}" %></div>
+            </div>
           </div>
         </div>
       </div>
