--- a/app/assets/stylesheets/pages/modules/_all.scss
+++ b/app/assets/stylesheets/pages/modules/_all.scss
@@ -3,6 +3,7 @@
 @import 'ekkolightbox';
 @import 'error';
 @import 'font';
+@import 'font/nucleo-outline';
 @import 'form';
 @import 'icon';
 @import 'map';
