--- a/app/assets/stylesheets/pages/modules/_font.sass
+++ b/app/assets/stylesheets/pages/modules/_font.sass
@@ -42,3 +42,10 @@
   font-family: 'Athiti'
   src: font-url('Athiti/Athiti-Light.ttf')
   font-weight: 200
+
+@font-face
+  font-family: 'Nucleo Outline'
+  src: font-url('nucleo-outline.eot')
+  src: font-url('nucleo-outline.eot') format("embedded-opentype"), font-url('nucleo-outline.woff2') format("woff2"), font-url('nucleo-outline.woff') format("woff"), font-url('nucleo-outline.ttf') format("truetype"), font-url('nucleo-outline.svg') format("svg")
+  font-weight: normal
+  font-style: normal
