--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -11,17 +11,16 @@
               <a href="<%= organizer_events_path %>">ALL (<%= @event.count %>)</a>
             </div>
             <div class="text-inline ml-10">
-              <a href="<%= organizer_events_path %>?filter=live">LIVE (<%= @live.count %>)</a>
+              <a href="<%= organizer_events_path(filter: :live, sort: params[:sort]) %>">LIVE (<%= @live.count %>)</a>
             </div>
             <div class="text-inline ml-10">
-              <a href="<%= organizer_events_path %>?filter=draft">DRAFT (<%= @draft.count %>)</a>
+              <a href="<%= organizer_events_path(filter: :draft, sort: params[:sort]) %>">DRAFT (<%= @draft.count %>)</a>
             </div>
             <div class="text-inline ml-10">
-              <a href="<%= organizer_events_path %>?filter=past">PAST (<%= @past.count %>)</a>
+              <a href="<%= organizer_events_path(filter: :past, sort: params[:sort]) %>">PAST (<%= @past.count %>)</a>
             </div>
           </div>
           <div class="col-xs-3 text-right">
-            <input type="hidden" class="current-url" value="<%= request.original_url %>">
             <select class="sort form-control">
               <option selected disabled>เรียงตาม: Recent</option>
               <option value="asc">Ascending</option>
@@ -33,11 +32,13 @@
           <div class="col-xs-12">
             <% @events.each do |event| %>
             <div class="event card-side-cover event-for-organizer event-<%= event.organizer_status %>">
-              <div style="display: table-cell; width: 100px; text-align: center padding-top: 30px;
-    text-align: center;
-    font-family: "Helvetica Neue", sans-serif;">
+              <div style="display: table-cell; width: 140px; padding-top: 30px;
+                          text-align: center;
+                          border-right: 2px solid #94E5E6;
+                          margin-right: 20px;
+                          font-family: \"Helvetica Neue\", sans-serif;">
                 <div style="font-size: 24px;
-    text-transform: uppercase;">
+                            text-transform: uppercase;">
                   <%= event.uptime.try(:strftime, "%b") %>
                 </div>
                 <div style="font-size: 50px;">
@@ -46,7 +47,15 @@
               </div>
               <div class="info">
                 <div class="info-body">
-                  <h4 class="title"><%= event.title %> <%= event.status == 'published' ? '<div class="btn btn-daydash-status btn-daydash-live">Live</div>'.html_safe : '<div class="btn btn-daydash-status btn-daydash-draft">Draft</div>'.html_safe %></h4>
+                  <h4 class="title">
+                    <%= event.title %>
+                    <% if event.uptime > Time.zone.now %>
+                      <%#= @event.status == 'published' ? '<div class="btn btn-daydash-status btn-daydash-live">Live</div>'.html_safe : '<div class="btn btn-daydash-status btn-daydash-draft">Draft</div>'.html_safe %>
+                      <%= event.status == 'published' ? '<div class="btn btn-daydash-status btn-daydash-live">Live</div>'.html_safe : '<div class="btn btn-daydash-status btn-daydash-draft">Draft</div>'.html_safe %>
+                    <% else %>
+                      <div class="btn btn-daydash-status btn-daydash-past">Past</div>
+                    <% end %>
+                  </h4>
                   <div class="meta date location"><%= event.to_uptime %> at <%= event.location_name %></div>
                 </div>
                 <div class="info-footer">
@@ -72,23 +81,23 @@
                       <ul class="list-inline list-action-nav">
                         <% if event.status.published? %>
                           <li>
-                            <a href="<%= dashboard_organizer_event_path(event) %>"><i class="icon icon-xs icon-order"></i> Manage Event</a>
+                            <a href="<%= dashboard_organizer_event_path(event) %>"><i class="nc-icon-outline files_folder-money"></i> Manage Event</a>
                           </li>
                         <% end %>
                         <li>
-                          <a href="<%= edit_organizer_event_path(event) %>"><i class="icon icon-xs icon-edit"></i> Edit</a>
+                          <a href="<%= edit_organizer_event_path(event) %>"><i class="nc-icon-outline design_pen-01"></i> Edit</a>
                         </li>
                         <% if event.status.published? %>
                           <li><%#= unpublish_organizer_event_path(event) %>
-                            <a href="<%= client_event_path(event) %>" target="_blank"><i class="icon icon-xs icon-unpublish"></i> View Event</a>
+                            <a href="<%= client_event_path(event) %>" target="_blank"><i class="nc-icon-outline ui-1_eye-17"></i> View Event</a>
                           </li>
                         <% else %>
                           <li>
-                            <a href="<%= published_organizer_event_path(event) %>"><i class="icon icon-xs icon-publish"></i> Go Live</a>
+                            <a href="<%= published_organizer_event_path(event) %>"><i class="nc-icon-outline media-1_button-power"></i> Go Live</a>
                           </li>
-                          <li>
+                          <!-- <li>
                             <a><i class="fa fa-trash-o fa-lg" aria-hidden="true"></i> Delete</a>
-                          </li>
+                          </li> -->
                         <% end %>
                       </ul>
                     </div>
@@ -108,7 +117,22 @@
 <script type="text/javascript">
   $('.sort').on('change', function(){
     var sort = $(this).val();
-    var url = $('.current-url').val();
-    window.location = url + '&sort=' + sort
-  })
+    var url = location.protocol + '//' + location.host + location.pathname
+    window.location = url + '?filter=' + getUrlParameter('filter') + '&sort=' + sort
+  });
+
+  var getUrlParameter = function getUrlParameter(sParam) {
+      var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+          sURLVariables = sPageURL.split('&'),
+          sParameterName,
+          i;
+
+      for (i = 0; i < sURLVariables.length; i++) {
+          sParameterName = sURLVariables[i].split('=');
+
+          if (sParameterName[0] === sParam) {
+              return sParameterName[1] === undefined ? true : sParameterName[1];
+          }
+      }
+  };
 </script>
