--- a/app/views/organizer/parts/_organizer-event-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-event-nav.html.erb
@@ -1,11 +1,11 @@
 <ul class="nav organizer-event-nav">
   <li class="organizer-event-nav-orders">
-    <a href="<%= orders_organizer_event_path(@event) %>"><i class="icon icon-xs icon-order"></i> Orders</a>
+    <a href="<%= orders_organizer_event_path(@event) %>"><i class="nc-icon-outline files_folder-money"></i> Orders</a>
   </li>
   <li class="organizer-event-nav-check-in">
-    <a href="<%= checkin_organizer_event_path(@event) %>"><i class="icon icon-xs icon-checkin"></i> Check in</a>
+    <a href="<%= checkin_organizer_event_path(@event) %>"><i class="nc-icon-outline users-2_a-check"></i> Check in</a>
   </li>
   <li class="organizer-event-nav-edit">
-    <a href="<%= edit_organizer_event_path(@event) %>"><i class="icon icon-xs icon-edit"></i> Edit</a>
+    <a href="<%= edit_organizer_event_path(@event) %>"><i class="nc-icon-outline design_pen-01"></i> Edit</a>
   </li>
 </ul>
