--- a/app/views/layouts/parts/_manage_nav.html.erb
+++ b/app/views/layouts/parts/_manage_nav.html.erb
@@ -2,20 +2,27 @@
   <div class="container">
     <div class="section-header row">
       <div class="col-md-9">
-        <h3 class="event-title" style="margin-top: 0px;"><%= @event.title %> <%= @event.status == 'published' ? '<div class="btn btn-daydash-status btn-daydash-live">Live</div>'.html_safe : '<div class="btn btn-daydash-status btn-daydash-draft">Draft</div>'.html_safe %></h3>
+        <h3 class="event-title" style="margin-top: 0px;">
+          <%= @event.title %>
+          <% if @event.uptime > Time.zone.now %>
+            <%= @event.status == 'published' ? '<div class="btn btn-daydash-status btn-daydash-live">Live</div>'.html_safe : '<div class="btn btn-daydash-status btn-daydash-draft">Draft</div>'.html_safe %>
+          <% else %>
+            <div class="btn btn-daydash-status btn-daydash-past">Past</div>
+          <% end %>
+        </h3>
         <p><%= @event.to_uptime %> at <%= @event.location_name %></p>
       </div>
       <div class="col-md-3 text-right">
-        <a href="<%= edit_organizer_event_path(@event) %>" class="btn btn-daydash-grey-1">Edit</a>
-        <a href="<%= client_event_path(@event) %>" target="_blank" class="btn btn-daydash-grey-1">View Event</a>
+        <a href="<%= edit_organizer_event_path(@event) %>" class="btn btn-daydash-grey-1"><i class="nc-icon-outline design_pen-01"></i> Edit</a>
+        <a href="<%= client_event_path(@event) %>" target="_blank" class="btn btn-daydash-grey-1"><i class="nc-icon-outline ui-1_eye-17"></i> View Event</a>
       </div>
     </div>
 
     <ul class="nav nav-pills nav-daydash" id="<%= current_user.can_organizer? ? 'organizer-nav' : 'profile-nav' %>">
-      <%= organizer_nav_link "Dashboard", dashboard_organizer_event_path(@event), 'organizer-event-nav-dashboard', 'icon-order' %>
-      <%= organizer_nav_link "Orders", orders_organizer_event_path(@event), 'organizer-event-nav-orders', 'icon-order' %>
-      <%= organizer_nav_link "Attendees", attendees_organizer_event_path(@event), 'organizer-event-nav-attendees', 'icon-edit' %>
-      <%= organizer_nav_link "Check in", checkin_organizer_event_path(@event), 'organizer-event-nav-check-in', 'icon-checkin' %>
+      <%= organizer_nav_link "Dashboard", dashboard_organizer_event_path(@event), 'organizer-event-nav-dashboard', 'nc-icon-outline ui-1_home-minimal' %>
+      <%= organizer_nav_link "Orders", orders_organizer_event_path(@event), 'organizer-event-nav-orders', 'nc-icon-outline files_folder-money' %>
+      <%= organizer_nav_link "Attendees", attendees_organizer_event_path(@event), 'organizer-event-nav-attendees', 'nc-icon-outline users_multiple-19' %>
+      <%= organizer_nav_link "Check in", checkin_organizer_event_path(@event), 'organizer-event-nav-check-in', 'nc-icon-outline users-2_a-check' %>
     </ul>
   </div>
 </div>
