--- a/app/views/organizer/events/dashboard.html.erb
+++ b/app/views/organizer/events/dashboard.html.erb
@@ -64,8 +64,8 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="widget copy-link">
-              <div class="btn btn-default">COPY URL</div>
-              <div style="display: inline-block; padding-left: 20px;"><%= "#{App.domain}#{client_event_path(@event)}" %></div>
+              <div id="copy-link" class="btn btn-daydash-copy" data-clipboard-target="#copy-target"><i class="nc-icon-outline ui-2_link-72"></i> COPY URL</div>
+              <div id="copy-target" style="display: inline-block; padding-left: 20px;"><%= "#{App.domain}#{client_event_path(@event)}" %></div>
             </div>
           </div>
         </div>
@@ -122,3 +122,9 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    new Clipboard('#copy-link');
+  });
+</script>
