--- a/app/assets/stylesheets/pages/organizers.sass
+++ b/app/assets/stylesheets/pages/organizers.sass
@@ -35,6 +35,10 @@
             color: white
             font-weight: 200
 
+  .export
+    padding: 6px 0px
+    a
+      color: #000
 
   .organizer-event-nav
     border-top: 1px solid #ddd
@@ -209,8 +213,3 @@
 
 #organizer-settings-page form .form-group:nth-child(2n+1)
   clear: left
-
-
-
-
-
