--- a/app/views/organizer/events/attendees.html.erb
+++ b/app/views/organizer/events/attendees.html.erb
@@ -7,29 +7,31 @@
       <div class="col-xs-12">
         <% @sections.each do |section| %>
         <div class="event-section-panel">
-					<div class="row panel-header">
-						<div class="col-xs-12 col-md-6">
-							Attendees: <%= section.tickets.paid.count %>
-						</div>
-						<div class="col-xs-6 col-md-3 text-right">
-							<%= link_to 'EXPORT', attendees_organizer_event_path(format: :xlsx) %>
-						</div>
-						<div class="col-xs-6 col-md-3 text-right">
+          <div class="row panel-header">
+            <div class="col-xs-12 col-md-6">
+              Attendees: <%= section.tickets.paid.count %>
+            </div>
+            <div class="col-xs-3 col-md-3 text-right export">
+              <%= link_to attendees_organizer_event_path(format: :xlsx) do %>
+                <i class="nc-icon-outline arrows-4_launch-47"></i> EXPORT
+              <% end %>
+            </div>
+            <div class="col-xs-6 col-md-3 text-right">
               <select class="form-control">
                 <option selected disabled>เรียงตาม: Recent</option>
                 <option>1</option>
                 <option>2</option>
               </select>
-						</div>
-					</div>
+            </div>
+          </div>
           <div class="table-responsive organizer-table">
             <table class="table table-hover">
               <thead>
                 <tr>
                   <td class="mobile-only"></td>
                   <td>ATTENDEE NAME</td>
-									<td>GENDER</td>
-									<td>AGE</td>
+                  <td>GENDER</td>
+                  <td>AGE</td>
                   <td>EMAIL</td>
                   <td>TEL</td>
                   <td>ORDER ID</td>
