--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <%= display_meta_tags %>
+
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name= "category-id" content="<%= @category_id %>">
+
     <%= csrf_meta_tags %>
-    <%= render partial: "layouts/parts/tracking" %>
+
+    <%= render partial: 'layouts/parts/tracking' %>
 
     <% if App.environment.production? %>
       <!-- Start of Async Drift Code -->
@@ -51,190 +55,17 @@
   </head>
   <body id="<%= yield(:body_id) %>" class="<%= yield(:body_class) %>">
     <div id="fb-root"></div>
+
     <div id="wrapper">
-      <div id="topbar">
-        <nav class="navbar navbar-static-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i class="icon icon-menu"></i></button>
-              <% if current_user.present? %>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#profile-navbar" aria-expanded="false" aria-controls="navbar">
-                  <div class="user-profile-photo" style="background-image: url('<%= current_user.picture(:medium) %>')"></div>
-                </button>
-              <% end %>
+      <%= render partial: 'layouts/parts/top_nav' %>
 
-              <%= link_to root_path, class: 'navbar-brand' do %>
-                <img src="/src/images/theme/logo.png" />
-              <% end %>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-              <% if current_user.present? %>
-                <ul class="nav navbar-nav navbar-right mobile-hide">
-                  <% if current_user.can_organizer? %>
-                    <li>
-                      <%= link_to "<div class=\"role-badge organizer-badge nav-badge\">ORGANIZER</div>".html_safe, organizer_events_path, class: 'organizer-nav' %>
-                    </li>
-                  <% end %>
-                  <li class="dropdown user-dropdown">
-                    <a href="/" class="dropdown-toggle" data-toggle="dropdown" role="button">
-                      <div class="user-profile-photo" style="background-image: url('<%= current_user.picture(:medium) %>')"></div>
-                      <% if current_user.organizer? %>
-                        <div class="user-name"><%= current_user.company %></div>
-                      <% else %>
-                        <div class="user-name"><%= current_user.first_name %></div>
-                      <% end %>
-                      <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li>
-                        <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
-                      </li>
-                      <li>
-                        <%= link_to "My Orders", client_profile_orders_path(current_user) %>
-                      </li>
-                      <li>
-                        <%= link_to "My Account", client_profile_settings_path(current_user) %>
-                      </li>
-                      <li>
-                        <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              <% else %>
-                <ul class="nav navbar-nav navbar-right">
-                  <li><a id="menu-login" class="btn btn-daydash btn-daydash-green-2" data-toggle="modal" data-target="#login-modal" href="#login-modal">สมัครสมาชิกฟรี / เข้าสู่ระบบ</a></li>
-                </ul>
-                <% end %>
-              </ul>
-              <ul class="nav navbar-nav navbar-left nav-organizer">
-                <% if current_user.present? %>
-                  <% if current_user.can_organizer? %>
-                    <!-- <li id="menu-event-list">
-                      <%#= link_to "Manage Events", organizer_events_path %>
-                    </li>
-                    <li id="menu-create-event">
-                      <%#= link_to "+ Create Event", new_organizer_event_path, "data-turbolinks" => false %>
-                    </li> -->
-                    <%= top_nav_link "Manage Event", organizer_events_path, 'menu-event-list' %>
-                    <%= top_nav_link "+ Create New Event", new_organizer_event_path, 'menu-create-event' %>
-                  <% else %>
-                    <li id="menu-my-tickets">
-                      <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
-                    </li>
-                    <li id="menu-my-orders">
-                      <%= link_to "My Orders", client_profile_orders_path(current_user) %>
-                    </li>
-                  <% end %>
-                  <!-- <li id="menu-settings">
-                    <%#= link_to "Account", client_profile_settings_path(current_user) %>
-                  </li> -->
-                <% end %>
-              </ul>
-            </div>
-
-            <% if current_user.present? %>
-              <div id="profile-navbar" class="navbar-collapsse collapse">
-                <ul class="nav navbar-nav mobile-only">
-                  <li>
-                    <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
-                  </li>
-                  <li>
-                    <%= link_to "My Orders", client_profile_orders_path(current_user) %>
-                  </li>
-                  <li>
-                    <%= link_to "My Account", client_profile_settings_path(current_user) %>
-                  </li>
-                  <li>
-                    <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
-                  </li>
-                </ul>
-              </div>
-            <% end %>
-          </div>
-        </nav>
-      </div>
       <div id="main">
         <%= yield %>
       </div>
-      <div id="footer">
-        <div class="container">
-          <div class="row">
-            <div class="col col-xs-12 col-md-3">
-              <div class="list-panel">
-                <div class="list-title">Explore</div>
-                <ul class="list-body nav">
-                  <% @global_categories.each do |category| %>
-                    <li>
-                      <a href="/categories/<%= category.slug %>"><%= category.title %></a>
-                    </li>
-                  <% end unless @global_categories.nil? %>
-                </ul>
-              </div>
-            </div>
-            <div class="col col-xs-12 col-md-3">
-              <div class="list-panel">
-                <div class="list-title">Support</div>
-                <ul class="list-body nav">
-                  <!-- <li><a href="/">List Event on Daydash</a></li> -->
-                  <li><a href="https://daydash.co/blog/" target="_blank">Daydash Blog</a></li>
-                  <li><a href="/about">About</a></li>
-                  <!-- <li><a href="/">How to Pay</a></li> -->
-                  <!-- <li><a href="/">FAQ</a></li> -->
-                  <!-- <li><a href="/contact">Contact</a></li> -->
-                </ul>
-              </div>
-            </div>
-            <div class="col col-xs-12 col-md-3">
-              <div class="list-panel social-list">
-                <div class="list-title">Connect</div>
-                <ul class="list-body list-inline">
-                  <li><a href="<%= "#{App.line_link}" %>" target="_blank"><i class="icon icon-line"></i></a></li>
-                  <li><a href="<%= "#{App.facebook_link}" %>" target="_blank"><i class="icon icon-facebook"></i></a></li>
-                  <li><a href="<%= "#{App.instagram_link}" %>" target="_blank"><i class="icon icon-instagram"></i></a></li>
-                  <li><a href="<%= "#{App.twitter_link}" %>" target="_blank"><i class="icon icon-twitter"></i></a></li>
-                </ul>
-              </div>
 
-              <div  class="fb-page"
-                    data-href="https://www.facebook.com/daydashapp/"
-                    data-small-header="true"
-                    data-adapt-container-width="true"
-                    data-hide-cover="false"
-                    data-show-facepile="true">
-              </div>
-            </div>
-            <div class="col col-xs-12 col-md-3">
-              <!-- <div class="list-panel">
-                <ul class="list-body list-inline">
-                  <li><a href="/"><img src="/src/images/theme/appstore.png" height="40" /></a></li>
-                  <li><a href="/"><img src="/src/images/theme/playstore.png" height="40" /></a></li>
-                </ul>
-              </div> -->
-
-              <div>
-                <div>© 2016 Daydash.co</div>
-                <!-- <div class="copyright">© 2016 Daydash.co</div> -->
-                <ul class="list-body list-inline">
-                  <li>
-                    <%= link_to "Terms & Conditions", terms_and_conditions_path %>
-                  </li>
-                  <li>
-                    <%= link_to "Privacy Policy", privacy_policy_path %>
-                  </li>
-                </ul>
-              </div>
-
-              <div class="cert-list" style="margin-top: 25px;">
-                <!-- <img src="/src/images/theme/comodo.png" height="30" /> -->
-                <img src="/src/images/theme/visa_master.png" height="30"/>
-                <!-- <img src="/src/images/theme/mixpanel.png" height="30"/> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <%= render partial: 'layouts/parts/footer' %>
     </div>
+
     <div class="modal fade" tabindex="-1" role="dialog" id="login-modal">
       <div class="modal-dialog modal-sm" role="document">
         <%= render partial: "layouts/parts/login-form" %>
