--- a/app/views/layouts/parts/_top_nav.html.erb
+++ b/app/views/layouts/parts/_top_nav.html.erb
@@ -2,42 +2,81 @@
   <nav class="navbar navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i class="icon icon-menu"></i></button>
+        <button type="button"
+                class="navbar-toggle collapsed"
+                data-toggle="collapse"
+                data-target="#navbar"
+                aria-expanded="false"
+                aria-controls="navbar">
+          <i class="icon icon-menu"></i>
+        </button>
         <% if current_user.present? %>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#profile-navbar" aria-expanded="false" aria-controls="navbar">
-            <div class="user-profile-photo" style="background-image: url('<%= current_user.picture(:medium) %>')"></div>
+          <button type="button"
+                  class="navbar-toggle collapsed"
+                  data-toggle="collapse"
+                  data-target="#navbar"
+                  aria-expanded="false"
+                  aria-controls="navbar">
+            <div class="user-profile-photo"
+                 style="background-image: url('<%= current_user.picture(:medium) %>')">
+            </div>
           </button>
         <% end %>
-
         <%= link_to root_path, class: 'navbar-brand' do %>
           <%= image_tag 'theme/logo.png' %>
         <% end %>
       </div>
+
+
       <div id="navbar" class="navbar-collapse collapse">
         <% if current_user.present? %>
-          <ul class="nav navbar-nav navbar-right mobile-hide">
+          <ul class="nav navbar-nav mobile-only">
             <% if current_user.can_organizer? %>
+              <%= top_nav_link "Manage Event", organizer_events_path, 'menu-event-list' %>
+              <%= top_nav_link "+ Create New Event", new_organizer_event_path, 'menu-create-event' %>
+            <% else %>
               <li>
-                <%= link_to "<div class=\"role-badge organizer-badge nav-badge\">ORGANIZER</div>".html_safe, organizer_events_path, class: 'organizer-nav' %>
+                <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
+              </li>
+              <li>
+                <%= link_to "My Orders", client_profile_orders_path(current_user) %>
               </li>
             <% end %>
+            <li>
+              <%= link_to "My Account", client_profile_settings_path(current_user) %>
+            </li>
+            <li>
+              <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+            </li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right mobile-hide">
+
+            <% if current_user.can_organizer? %>
+              <li>
+                <%= link_to organizer_events_path, class: 'organizer-nav' do %>
+                  <div class="role-badge organizer-badge nav-badge">ORGANIZER</div>
+                <% end %>
+              </li>
+            <% end %>
+
             <li class="dropdown user-dropdown">
               <a href="/" class="dropdown-toggle" data-toggle="dropdown" role="button">
-                <div class="user-profile-photo" style="background-image: url('<%= current_user.picture(:medium) %>')"></div>
-                <% if current_user.organizer? %>
-                  <div class="user-name"><%= current_user.company %></div>
-                <% else %>
-                  <div class="user-name"><%= current_user.first_name %></div>
-                <% end %>
+                <div class="user-profile-photo"
+                     style="background-image: url('<%= current_user.picture(:medium) %>')">
+                </div>
+                <div class="user-name"><%= current_user.organizer? ? current_user.company : current_user.first_name %></div>
                 <i class="fa fa-caret-down"></i>
               </a>
               <ul class="dropdown-menu">
-                <li>
-                  <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
-                </li>
-                <li>
-                  <%= link_to "My Orders", client_profile_orders_path(current_user) %>
-                </li>
+                <% unless current_user.can_organizer? %>
+                  <li>
+                    <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
+                  </li>
+                  <li>
+                    <%= link_to "My Orders", client_profile_orders_path(current_user) %>
+                  </li>
+                <% end %>
                 <li>
                   <%= link_to "My Account", client_profile_settings_path(current_user) %>
                 </li>
@@ -47,49 +86,27 @@
               </ul>
             </li>
           </ul>
-        <% else %>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a id="menu-login" class="btn btn-daydash btn-daydash-green-2" data-toggle="modal" data-target="#login-modal" href="#login-modal">สมัครสมาชิกฟรี / เข้าสู่ระบบ</a></li>
-          </ul>
-        <% end %>
-        <ul class="nav navbar-nav navbar-left nav-organizer">
-          <% if current_user.present? %>
+
+          <ul class="nav navbar-nav navbar-left mobile-hide nav-organizer">
             <% if current_user.can_organizer? %>
               <%= top_nav_link "Manage Event", organizer_events_path, 'menu-event-list' %>
               <%= top_nav_link "+ Create New Event", new_organizer_event_path, 'menu-create-event' %>
-            <% else %>
-              <li id="menu-my-tickets">
-                <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
-              </li>
-              <li id="menu-my-orders">
-                <%= link_to "My Orders", client_profile_orders_path(current_user) %>
-              </li>
             <% end %>
-            <!-- <li id="menu-settings">
-              <%#= link_to "Account", client_profile_settings_path(current_user) %>
-            </li> -->
-          <% end %>
-        </ul>
-      </div>
-
-      <% if current_user.present? %>
-        <div id="profile-navbar" class="navbar-collapsse collapse">
-          <ul class="nav navbar-nav mobile-only">
+          </ul>
+        <% else %>
+          <ul class="nav navbar-nav navbar-right">
             <li>
-              <%= link_to "My Tickets", client_profile_tickets_path(current_user) %>
-            </li>
-            <li>
-              <%= link_to "My Orders", client_profile_orders_path(current_user) %>
-            </li>
-            <li>
-              <%= link_to "My Account", client_profile_settings_path(current_user) %>
-            </li>
-            <li>
-              <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+              <a id="menu-login"
+                 class="btn btn-daydash btn-daydash-green-2"
+                 data-toggle="modal"
+                 data-target="#login-modal"
+                 href="#login-modal">
+                สมัครสมาชิกฟรี / เข้าสู่ระบบ
+              </a>
             </li>
           </ul>
-        </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </nav>
 </div>
