--- a/app/views/layouts/parts/_top_nav.html.erb
+++ b/app/views/layouts/parts/_top_nav.html.erb
@@ -87,13 +87,59 @@
             </li>
           </ul>
 
-          <ul class="nav navbar-nav navbar-left mobile-hide nav-organizer">
-            <% if current_user.can_organizer? %>
+          <% if current_user.can_organizer? %>
+            <ul class="nav navbar-nav navbar-left mobile-hide nav-organizer">
               <%= top_nav_link "Manage Event", organizer_events_path, 'menu-event-list' %>
               <%= top_nav_link "+ Create New Event", new_organizer_event_path, 'menu-create-event' %>
-            <% end %>
-          </ul>
+            </ul>
+          <% else %>
+            <ul class="nav navbar-nav navbar-left mobile-hide">
+              <!-- <li>
+                <a href="#">Explore</a>
+              </li>
+              <li>
+                <a href="#">Daydash คืออะไร</a>
+              </li> -->
+
+              <li>
+                <%= link_to 'ALL', root_path %>
+              </li>
+
+              <% @global_categories.each do |category| %>
+                <li>
+                  <% if is_index_with_categories? %>
+                    <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
+                  <% else %>
+                    <a href="/categories/<%= category.slug %>"><%= category.title %></a>
+                  <% end %>
+                </li>
+              <% end unless @global_categories.nil? %>
+            </ul>
+          <% end %>
         <% else %>
+          <ul class="nav navbar-nav navbar-left mobile-hide">
+            <!-- <li>
+              <a href="#">Explore</a>
+            </li>
+            <li>
+              <a href="#">Daydash คืออะไร</a>
+            </li> -->
+
+            <li>
+              <%= link_to 'ALL', root_path %>
+            </li>
+
+            <% @global_categories.each do |category| %>
+              <li>
+                <% if is_index_with_categories? %>
+                  <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
+                <% else %>
+                  <a href="/categories/<%= category.slug %>"><%= category.title %></a>
+                <% end %>
+              </li>
+            <% end unless @global_categories.nil? %>
+          </ul>
+
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a id="menu-login"
